[package]
name = "globed-central-server"
version = "1.4.0"
edition = "2024"

[dependencies]
globed-shared = { path = "../shared" }

async-watcher = "*"
blake2 = "*"
digest = "*"
ipnet = "*"
iprange = "*"
serde = { version = "*", features = ["serde_derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
json_comments = "*"
rocket = { version = "*", features = ["json"] }
rocket_db_pools = { version = "*", features = ["sqlx_sqlite"] }
sqlx = { version = "^0.7.0", features = [ # TODO: rocket_db_pools is broken in sqlx 0.8.x
    "migrate",
    "runtime-tokio-rustls",
] }
rocket_cors = "*"
const_format = "*"
hex = "*"
