[package]
name = "globed-central-server"
version = "1.4.0"
edition = "2024"

[dependencies]
globed-shared = { path = "../shared" }

async-watcher = "0.3.0"
blake2 = "0.11.0-pre.4"
digest = "0.11.0-pre.9"
ipnet = "2.10.1"
iprange = "0.6.7"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
json_comments = "0.2.2"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
sqlx = { version = "^0.7.0", features = [ # TODO: rocket_db_pools is broken in sqlx 0.8.x
    "migrate",
    "runtime-tokio-rustls",
] }
rocket_cors = "0.6.0"
const_format = "0.2.34"
hex = "0.4.3"
