[package]
name = "globed-game-server"
version = "1.4.0"
edition = "2024"

[dependencies]
globed-shared = { path = "../shared" }
globed-derive = { path = "../derive" }
esp = { path = "../esp" }

alloca = "*"
ctrlc = "*"
rustc-hash = "*"
serde = { version = "*", features = ["serde_derive"] }
serde_json = "*"
futures-util = "*"
console-subscriber = { version = "*", features = ["parking_lot"] }

# tokio_tracing = { package = "tokio", version = "*", features = [
#     "full",
#     "tracing",
# ], optional = true }

tokio = { version = "*", features = ["full"], optional = true }
aho-corasick = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "globed-bench"
path = "benchmarks/bench.rs"
harness = false

[[test]]
name = "globed-tests"
path = "tests/test.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[features]
default = ["tokio"]
# use_tokio_tracing = ["tokio_tracing"]
