[package]
name = "globed-game-server"
version = "1.4.0"
edition = "2024"

[dependencies]
globed-shared = { path = "../shared" }
globed-derive = { path = "../derive" }
esp = { path = "../esp" }

alloca = "0.4.0"
async-watcher = "0.3.0"
ctrlc = "3.4.5"
rustc-hash = "2.1.0"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
futures-util = "0.3.31"
console-subscriber = { version = "0.4.1", features = ["parking_lot"] }

# tokio_tracing = { package = "tokio", version = "1.42.0", features = [
#     "full",
#     "tracing",
# ], optional = true }
tokio = { version = "1.42.0", features = ["full", "tracing"], optional = true }
aho-corasick = "1.1.3"
slotmap = "1.0.7"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "globed-bench"
path = "benchmarks/bench.rs"
harness = false

[[test]]
name = "globed-tests"
path = "tests/test.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[features]
default = ["tokio"]
# use_tokio_tracing = ["tokio_tracing"]
