[package]
name = "globed-shared"
version = "1.0.0"
edition = "2024"

[dependencies]
esp = { path = "../esp" }
globed-derive = { path = "../derive" }

anyhow = "1.0.93"
base64 = "0.22.1"
colored = "2.1.0"
crypto_box = { version = "0.9.1", features = ["std", "chacha20"] }
hmac = "0.13.0-pre.4"
log = "0.4.22"
nohash-hasher = "0.2.0"
parking_lot = "0.12.3"
rand = "0.9.0-beta.1"
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
] }
sha2 = "0.11.0-pre.4"
time = { version = "0.3.36", features = ["formatting"] }
serde = { version = "1.0.215", features = ["derive"] }
crypto_secretbox = { version = "0.1.1", features = ["chacha20"] }
serde_json = "1.0.133"
argon2 = "0.6.0-pre.1"
