[package]
name = "globed-shared"
version = "1.0.0"
edition = "2024"

[dependencies]
esp = { path = "../esp" }
globed-derive = { path = "../derive" }

anyhow = "*"
base64 = "*"
colored = "*"
crypto_box = { version = "*", features = ["std", "chacha20"] }
hmac = "*"
log = "*"
nohash-hasher = "*"
parking_lot = "*"
rand = "*"
reqwest = { version = "*", default-features = false, features = [
    "rustls-tls",
] }
sha2 = "*"
time = { version = "*", features = ["formatting"] }
serde = { version = "*", features = ["derive"] }
crypto_secretbox = { version = "*", features = ["chacha20"] }
serde_json = "*"
argon2 = "*"
